--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
