--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "geist": "^1.3.0",
     "holy-loader": "^2.2.8",
     "next": "13.5.6",
     "postcss": "8.4.31",
