--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.4",
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
@@ -18,7 +19,7 @@
     "eslint-config-next": "13.4.13",
     "geist": "^1.3.0",
     "holy-loader": "^2.2.8",
-    "next": "14.1.1",
+    "next": "^14.2.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
