--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.0",
     "eslint": "8.46.0",
