--- a/package.json
+++ b/package.json
@@ -1,33 +1,46 @@
 {
-  "name": "movies",
-  "version": "0.1.0",
+  "name": "next-template",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "preview": "next build && next start",
+    "typecheck": "tsc --noEmit",
+    "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@next/third-parties": "^14.2.4",
-    "@types/node": "20.4.9",
-    "@types/react": "18.2.19",
-    "@types/react-dom": "18.2.7",
-    "@vercel/analytics": "^1.3.1",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.6.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.13",
-    "geist": "^1.3.0",
-    "holy-loader": "^2.2.8",
-    "next": "^14.2.4",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "server-only": "^0.0.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "use-debounce": "^10.0.1"
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
+    "lucide-react": "0.105.0-alpha.4",
+    "next": "^13.4.8",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.31.3",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/parser": "^5.61.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.5"
   }
 }
