--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,11 +6,12 @@
     "prettier",
     "plugin:tailwindcss/recommended"
   ],
-  "plugins": ["tailwindcss"],
+  "plugins": ["tailwindcss", "unused-imports"],
   "rules": {
     "@next/next/no-html-link-for-pages": "off",
     "react/jsx-key": "off",
-    "tailwindcss/no-custom-classname": "off"
+    "tailwindcss/no-custom-classname": "off",
+    "unused-imports/no-unused-imports": "error"
   },
   "settings": {
     "tailwindcss": {
