--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "geist": "^1.3.0",
     "lucide-react": "^0.105.0-alpha.4",
     "next": "^14.2.4",
     "next-themes": "^0.2.1",
