--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
-    "@types/node": "^17.0.45",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.4.9",
+    "@types/react": "18.2.19",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/parser": "^7.15.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "14.2.4",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "13.4.13",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
@@ -51,7 +51,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.5.3"
+    "typescript": "5.1.6"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
