--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "^14.2.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^1.14.0",
