--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
@@ -36,7 +38,7 @@
     "embla-carousel-react": "^8.1.6",
     "geist": "^1.3.0",
     "holy-loader": "^2.3.1",
-    "lucide-react": "^0.406.0",
+    "lucide-react": "^0.408.0",
     "next": "^14.2.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
