--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -36,6 +37,8 @@
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
     "geist": "^1.3.0",
     "holy-loader": "^2.3.1",
@@ -44,6 +47,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^1.14.0",
