--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
   "editor.codeActionsOnSave": [
     "source.fixAll.eslint",
     "source.addMissingImports"
-  ]
+  ],
+  "javascript.preferences.importModuleSpecifier": "non-relative",
+  "typescript.preferences.importModuleSpecifier": "non-relative"
 }
